bzip2ida/c2/BZ2_compressBlock
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1514:44: error: use of undeclared identifier 'xmmword_419540'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_419540); 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1516:42: error: use of undeclared identifier 'xmmword_419550'
v60 = _mm_load_si128( ( const __m128i *)&xmmword_419550); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1517:42: error: use of undeclared identifier 'xmmword_419560'
v61 = _mm_load_si128( ( const __m128i *)&xmmword_419560); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1518:42: error: use of undeclared identifier 'xmmword_419570'
v62 = _mm_load_si128( ( const __m128i *)&xmmword_419570); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1519:42: error: use of undeclared identifier 'xmmword_419580'
v63 = _mm_load_si128( ( const __m128i *)&xmmword_419580); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1520:42: error: use of undeclared identifier 'xmmword_419590'
v64 = _mm_load_si128( ( const __m128i *)&xmmword_419590); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1521:42: error: use of undeclared identifier 'xmmword_4195A0'
v65 = _mm_load_si128( ( const __m128i *)&xmmword_4195A0); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1522:42: error: use of undeclared identifier 'xmmword_4195B0'
v66 = _mm_load_si128( ( const __m128i *)&xmmword_4195B0); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1523:42: error: use of undeclared identifier 'xmmword_4195C0'
v67 = _mm_load_si128( ( const __m128i *)&xmmword_4195C0); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1542:44: error: use of undeclared identifier 'xmmword_419540'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_419540); 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1549:42: error: use of undeclared identifier 'xmmword_419550'
v70 = _mm_load_si128( ( const __m128i *)&xmmword_419550); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/compress.c:1550:42: error: use of undeclared identifier 'xmmword_419560'
v71 = _mm_load_si128( ( const __m128i *)&xmmword_419560); 
                                         ^
12 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_compressBlock/src/obj/compress.o] Error 1
